<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigationHome"
        android:icon="@drawable/ic_home_24"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/navigationSearch"
        android:icon="@drawable/ic_plant_24"
        android:title="@string/menu_search" />

    <item
        android:id="@+id/navigationArticles"
        android:icon="@drawable/ic_book_24"
        android:title="@string/menu_articles" />

    <item
        android:id="@+id/navigationBookmarks"
        android:icon="@drawable/ic_bookmark_24"
        android:title="@string/menu_bookmarks" />

    <item
        android:id="@+id/navigationProfile"
        android:icon="@drawable/ic_profile_24"
        android:title="@string/menu_profile" />

</menu>