<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_my_plants"
            app:titleTextAppearance="@style/TextAppearance.TitleLarge"
            app:menu="@menu/home_menu"
            app:navigationIcon="@null" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:indeterminate="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsvContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/nsvContainer"
            android:paddingVertical="16dp"
            android:paddingHorizontal="8dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnScanDisease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textAppearance="@style/TextAppearance.TitleMedium"
                app:icon="@drawable/ic_scan_24"
                style="@style/AppTheme.Button.Tonal"
                android:text="@string/btn_scan_the_disease" />

            <Space
                android:layout_width="0dp"
                android:layout_height="16dp" />

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.BodyLarge"
                    android:text="@string/subtitle_frequent_disease" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnFrequentDiseaseViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_view_all"
                    style="@style/AppTheme.Button.TextButton"
                    android:textAppearance="@style/TextAppearance.LabelLarge" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvFrequentIllnesses"
                android:requiresFadingEdge="horizontal"
                android:fadingEdge="horizontal"
                android:fadingEdgeLength="8dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:dividerColor="@color/light_divider_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.BodyLarge"
                    android:text="@string/subtitle_categories" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnCategoriesViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_view_all"
                    android:textAppearance="@style/TextAppearance.LabelLarge"
                    style="@style/AppTheme.Button.TextButton" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCategories"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="8dp"
                app:dividerColor="@color/light_divider_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textAppearance="@style/TextAppearance.BodyLarge"
                    android:text="@string/subtitle_news" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnNewsViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_view_all"
                    android:textAppearance="@style/TextAppearance.LabelLarge"
                    style="@style/AppTheme.Button.TextButton" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNews"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>