<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/top_rounded_corners_16"
    android:backgroundTint="@color/light_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_skipCollapsed="true"
    app:behavior_peekHeight="128dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical|start"
            android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/ivResultIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:backgroundTint="#3161AF2B"
                    android:background="@drawable/rounded_corners_12"
                    app:tint="#61AF2B"
                    android:padding="4dp"
                    android:contentDescription="@null"
                    app:srcCompat="@drawable/ic_baseline_done_24" />

                <TextView
                    android:id="@+id/tvResult"
                    android:paddingHorizontal="16dp"
                    android:textColor="@color/light_primary_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Ура, мы смогли определить болезнь!" />

            </LinearLayout>

            <TextView
                android:paddingHorizontal="16dp"
                android:id="@+id/tvTitle"
                android:paddingVertical="8dp"
                android:textStyle="bold"
                android:maxLines="3"
                android:ellipsize="end"
                android:textAppearance="@style/TextAppearance.HeadlineLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Жёлтая ржавчина" />

            <LinearLayout
                android:id="@+id/containerDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp"
                android:orientation="vertical">

                <TextView
                    android:paddingVertical="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.HeadlineSmall"
                    android:text="@string/title_description" />

                <TextView
                    android:id="@+id/tvSource"
                    android:paddingVertical="8dp"
                    android:textColor="@color/light_tertiary_text_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.BodyMedium"
                    tools:text="Из Википедии - свободной энциклопедии" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:paddingVertical="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.BodyMedium"
                    tools:text="Желтая ржавчина, или полосатая ржавчина, получила свое название от появления полос желтого цвета, образующихся параллельно вдоль жилков каждой листовой пластинки. Эти желтые полосы на самом деле" />

                <Button
                    android:id="@+id/btnReadMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:textAppearance="@style/TextAppearance.LabelLarge"
                    style="@style/AppTheme.Button.TextButton"
                    android:text="@string/btn_read_more" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_marginVertical="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:dividerColor="@color/light_divider_color"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:padding="8dp"
                            android:backgroundTint="#36B62020"
                            android:background="@drawable/rounded_corners_12"
                            app:tint="#B62020"
                            android:contentDescription="@null"
                            app:srcCompat="@drawable/ic_death_24" />

                        <LinearLayout
                            android:paddingHorizontal="16dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.LabelLarge"
                            android:textColor="#B62020"
                            android:text="@string/subtitle_danger" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="4dp"/>

                        <TextView
                            android:id="@+id/tvDanger"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.BodyMedium"
                            tools:text="Маленькая" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:backgroundTint="#407C95E4"
                        android:background="@drawable/rounded_corners_12"
                        app:tint="#7C95E4"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_bug_24" />

                    <LinearLayout
                        android:paddingHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.LabelLarge"
                            android:textColor="#7C95E4"
                            android:text="@string/subtitle_type_of_disease" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="4dp"/>

                        <TextView
                            android:id="@+id/tvTypeOfDisease"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.BodyMedium"
                            tools:text="Грибковая" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:backgroundTint="#31FFC701"
                        android:background="@drawable/rounded_corners_12"
                        app:tint="#FFC701"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_plant_v2_24" />

                    <LinearLayout
                        android:paddingHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.LabelLarge"
                            android:textColor="#FFC701"
                            android:text="@string/subtitle_symptoms" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="4dp"/>

                        <TextView
                            android:id="@+id/tvSymptoms"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.BodyMedium"
                            tools:text="Локальные" />
                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:padding="8dp"
                        android:backgroundTint="#3161AF2B"
                        android:background="@drawable/rounded_corners_12"
                        app:tint="#61AF2B"
                        android:contentDescription="@null"
                        app:srcCompat="@drawable/ic_pill_24" />

                    <LinearLayout
                        android:paddingHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.LabelLarge"
                            android:textColor="#61AF2B"
                            android:text="@string/subtitle_type_of_treatment" />

                        <Space
                            android:layout_width="0dp"
                            android:layout_height="4dp"/>

                        <TextView
                            android:id="@+id/tvTypeOfTreatment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.BodyMedium"
                            tools:text="Фунгициды" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <Space
                android:layout_width="0dp"
                android:layout_height="16dp"/>

            <Button
                android:id="@+id/btnSaveDisease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_bookmark_24"
                style="@style/AppTheme.Button.Filled"
                android:text="@string/btn_save_disease" />

            <Button
                android:id="@+id/btnRemoveDisease"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_bookmark_24"
                style="@style/AppTheme.Button.TextButton"
                android:text="@string/btn_remove_disease" />

            <Space
                android:layout_width="0dp"
                android:layout_height="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:orientation="vertical">

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/light_card_background_color"
                app:cardCornerRadius="12dp"
                android:layout_marginHorizontal="8dp"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="4dp"
                        android:autofillHints="name"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/hint_search"
                        android:inputType="text"
                        android:textAppearance="@style/TextAppearance.BodyLarge" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Space
                android:layout_width="0dp"
                android:layout_height="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDiseaseSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="0dp"
                android:layout_height="16dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>